tb/issue #20 fixed recipe table alignment

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -613,25 +613,25 @@ button:focus {
 
 .ingredient-input-name {
   margin-left: 1vw;
-  width: 30vw;
+  width: 30%;
   margin-right: 1vw;
 }
 .ingredient-input-expiration {
-  width: 30vw;
+  width: 30%;
   margin-right: 1vw;
 }
 
 .ingredient-input-quantity {
-  width: 6vw;
+  width: 10%;
   margin-right: 1vw;
 }
 
 .ingredient-input-calories {
-  width: 6vw;
+  width: 10%;
 }
 
 .ingredient-input-unit {
-  width: 12vw;
+  width: 18%;
   margin-right: 1vw;
 }
 
@@ -729,30 +729,31 @@ button:focus {
 }
 
 .ingredient-input-name-edit {
-  width: 30vw;
+  width: 30%;
   margin-right: 1vw;
 }
 .ingredient-input-expiration-edit {
-  width: 30vw;
+  width: 29%;
   margin-right: 1vw;
 }
 
 .ingredient-input-quantity-edit {
-  width: 10vw;
+  width: 10%;
   margin-right: 1vw;
 }
 
 .ingredient-input-unit-edit {
-  width: 18vw;
+  width: 18%;
   margin-right: 1vw;
 }
 
 .ingredient-input-calories-edit {
-  width: 10vw;
+  width: 10%;
+  margin-right: 1vw;
 }
 
 .direction-textarea-edit {
-  width: 60vw;
+  width: 90%;
 }
 
 .picture-url-input {
